@@ -13,3 +13,4 @@ Adam Simpkins <adam@adamsimpkins.net>
 Mike Blumenkrantz <michael.blumenkrantz@gmail.com>
 Lionel Orry <lionel.orry@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
+Leandro Sansilva
